k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: distribuidas-ingress
  namespace: distribuidas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: distribuidas.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: eureka-server
                port:
                  number: 8761
          - path: /rabbitmq
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-nodeport
                port:
                  number: 15672
          - path: /cockroach
            pathType: Prefix
            backend:
              service:
                name: cockroachdb-nodeport
                port:
                  number: 8080
